force-app/main/default/objects/Incode_Verification__c/Incode_Verification__c.object-meta.xml
<CustomObject>
    <description>Stores identity verification session data returned by the Incode platform.</description>
    <label>Incode Verification</label>
    <nameField>
        <displayFormat>IV-{0000}</displayFormat>
        <label>Verification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incode Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>