force-app/main/default/objects/Incode_Verification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Salesforce Account associated with this verification session.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incode Verifications</relationshipLabel>
    <relationshipName>Incode_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>