force-app/main/default/objects/Incode_Verification__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date and time when the verification session was completed by the user.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>