force-app/main/default/objects/Incode_Verification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The Salesforce Contact associated with this verification session.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incode Verifications</relationshipLabel>
    <relationshipName>Incode_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>