force-app/main/default/objects/Incode_Verification__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <description>The Salesforce record ID passed to Incode as externalCustomerId when the session was created.</description>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>