force-app/main/default/objects/Incode_Verification__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <description>The Salesforce Lead associated with this verification session.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Incode Verifications</relationshipLabel>
    <relationshipName>Incode_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>