force-app/main/default/objects/Incode_Verification__c/fields/Raw_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Raw_Event_Type__c</fullName>
    <description>The exact event_type string received from the Incode webhook. Stored for auditing and debugging.</description>
    <label>Raw Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>