force-app/main/default/objects/Incode_Verification__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>Date and time when the verification request was initiated.</description>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>