force-app/main/default/objects/Incode_Verification__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Overall verification score returned by Incode after session completion.</description>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>