force-app/main/default/objects/Incode_Verification__c/fields/Session_Details__c.field-meta.xml
<CustomField>
    <fullName>Session_Details__c</fullName>
    <label>Session Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>