force-app/main/default/objects/Incode_Verification__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <description>The Incode interview/session ID returned when a verification session is initiated.</description>
    <externalId>true</externalId>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>