force-app/main/default/objects/Incode_Verification__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <label>Session Token</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>