force-app/main/default/objects/Incode_Verification__c/fields/Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Verification_URL__c</fullName>
    <description>The hosted verification URL returned by Incode. Sent to the contact via email.</description>
    <label>Verification URL</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>